kubernetes/infrastructure/config/traefik-dashboard-auth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: dashboard-auth
