kubernetes/infrastructure/config/traefik-dashboard-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.local`)
      kind: Rule
      middlewares:
        - name: dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
